# dq-dev

./: .gitignore  README.md  Taskfile.yml  manage.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build.yaml
conf/: baseconf.toml  secrets.toml
conf_tpl/: conf.toml  secrets.toml
docker/daiquiri/: dockerfile.tpl
docker/daiquiri/rootfs/: drun.sh
docker/daiquiri/rootfs/home/dq/: .bashrc
docker/daiquiri/rootfs/home/dq/conf/: crontab  fixture_files_path.json  hooks.yaml  hooks_example.yaml  supervisord.conf
docker/daiquiri/rootfs/home/dq/py/: render_supervisord_conf.py
docker/daiquiri/rootfs/home/dq/sh/: add_files_path.sh  add_user.sh  archive-jobs.sh  cleanup-download-files.sh  fix_antlr_error.sh  healthcheck.sh  init-folders.sh  init-testdata.sh  init_all.sh  install-app-requirements.sh  install-app.sh  install-daiquiri.sh  install-from-github.sh  install-local-daiquiri.sh  pull_content.sh  pull_docs_content.sh  render_supervisord_conf.sh  run-caddy.sh  run-nginx.sh  run-php.sh  run-rmq-worker.sh  run-web-server.sh  spv.sh  update_lunr_index.sh  wait_for.sh
docker/daiquiri/rootfs/home/dq/tpl/: Caddyfile  Caddyfile.tpl  add_to_bashrc  nginx.conf  supervisord.conf  wp-config.php
docker/docs/: dockerfile.tpl
docker/docs/rootfs/home/docs/: .bashrc
docker/docs/rootfs/home/docs/conf/: Caddyfile  supervisord.conf
docker/docs/rootfs/home/docs/sh/: pull_content.sh  update_lunr_index.sh
docker/pgapp/: dockerfile.tpl
docker/pgdata/: dockerfile.tpl
docker/pgdata/rootfs/: 20-init-db.sh
docker/rabbitmq/: dockerfile.tpl
docker/wpdb/: dockerfile.tpl
dq_dev/: colours.py  dcompose.py  init.py  profile.py  runner.py  snapshots.py  util.py
py/: colours.py  dcompose.py  init.py  profile.py  runner.py  snapshots.py  util.py
scripts/migrate_postgres/: migrate.sh
test/: fire_requests.py  fixpath.py  util_test.py
test/dqdev-rp/: Dockerfile  readme.md  run.sh
test/dqdev-rp/docker/: Caddyfile  dqdev-rp-key.pem  dqdev-rp.pem  drun.sh
test/testconf/: req_rp.toml  req_test.toml
