[project]
name = "dq-dev"
version = "0.4.1"
description = "Container management for daiquiri"
authors = [{ name = "EScience Team at AIP", email = "escience@aip.de" }]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml (>=6.0.2,<7.0.0)",
  "tabulate (>=0.9.0,<0.10.0)",
  "pytomlpp (>=1.0.13,<2.0.0)",
]

[project.optional-dependencies]
daiquiri = [
    "django-daiquiri (>=1.1.0,<2.0.0)"
]
dev = [
  "ruff",
  "mypy (>=1.15.0,<2.0.0)",
  "pytest (>=8.3.5,<9.0.0)",
  "requests (>=2.32.3,<3.0.0)",
]

[project.scripts]
dqpm = "manage:main"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.setuptools.packages.find]
where = ["."]
include = ["dq_dev"]
exclude = []
